WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310836
PiP video freezes after accessing Notification Center
https://bugs.webkit.org/show_bug.cgi?id=310836
Summary
PiP video freezes after accessing Notification Center
phinehas133
Reported
2026-03-26 15:00:19 PDT
see title
Attachments
Add attachment
proposed patch, testcase, etc.
phinehas133
Comment 1
2026-03-26 15:00:20 PDT
<
rdar://problem/168296734
>
phinehas133
Comment 2
2026-03-26 15:03:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61436
EWS
Comment 3
2026-03-27 12:59:54 PDT
Committed
310100@main
(e7dc15372957): <
https://commits.webkit.org/310100@main
> Reviewed commits have been landed. Closing PR #61436 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug