PiP video freezes after accessing Notification Center https://bugs.webkit.org/show_bug.cgi?id=310836 rdar://168296734

Reviewed by Jer Noble.

When entering PiP via swipe-up from fullscreen, the app transitions to the background, setting
m_applicationIsActive to false. If the PiP window is subsequently occluded (e.g. by Notification
Center) and then revealed, AVFoundation posts a requiresFlushToResumeDecoding notification.
However, setLayerRequiresFlush() was gated on m_applicationIsActive, so the flush was skipped and
the video froze on a stale frame while audio continued playing.

Track fullscreen/PiP state via m_isInFullscreenOrPictureInPicture and allow the flush to proceed
when the video layer is still visible in a PiP window, even though the app itself is inactive.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::WTF_GUARDED_BY_CAPABILITY):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::setLayerRequiresFlush):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::isInFullscreenOrPictureInPictureChanged):

Canonical link: https://commits.webkit.org/310100@main